Add class to html and views

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -4,3 +4,5 @@
 <p>{{ name }}</p> <!-- Ubah sesuai dengan nama kamu -->
 <h4>NPM: </h4>
 <p>{{ npm }}</p> <!-- Ubah sesuai dengan npm kamu -->
+<h4>Class: </h4>
+<p>{{ class }}</p> <!-- Ubah sesuai dengan npm kamu -->
