--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -24,7 +24,7 @@
 {% for product in product_list %}
 <div>
     {% if product.thumbnail %}
-    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150" height="100">
+    <img src="{{ product.thumbnail }}" alt="thumbnail" width="150">
     <br />
     {% endif %}
     
@@ -33,7 +33,7 @@
 
   <p><b>{{ product.get_category_display }}
     </b>{% if product.is_featured %} | <b>Featured</b>{% endif %}
-    {% if product.is_product_recommended %} | <b>Loved by Everyone!</b>{% endif %}</p>
+    {% if product.is_product_recommended %} | <b>Loved by Everyone!</b>{% endif %} | <b>Rating: {{ product.rating }}/5</b></p>
 
     <p>{{ product.description|truncatewords:25 }}...</p>
 
