--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -15,7 +15,20 @@
   <button>+ Add Product</button>
 </a>
 
+<a href="{% url 'main:logout' %}">
+  <button>Logout</button>
+</a>
+
+<h5>Sesi terakhir login: {{ last_login }}</h5>
+
 <hr>
+
+<a href="?filter=all">
+    <button type="button">All Products</button>
+</a>
+<a href="?filter=my">
+    <button type="button">My Products</button>
+</a>
 
 {% if not product_list %}
 <p>Belum ada product yang dijual.</p>
