feat(tugas 5): add main page styling and navbar

--- a/main/templates/product_detail.html
+++ b/main/templates/product_detail.html
@@ -61,7 +61,7 @@
             </div>
 
             <!-- Content -->
-            <div class="px-6 pb-6 sm:px-8 pb-8">
+            <div class="px-6 pb-6 sm:px-8">
                 <div class="text-gray-700 leading-relaxed whitespace-normal text-base sm:text-lg">
                         {{ product.description }}
                 </div>
