feat(tugas 5): implement ajax on delete_product with toast

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -56,4 +56,10 @@
     {% endif %}
   </div>
 </div>
+
+<!-- Modal konformasi delete product -->
+{% include 'modal_delete.html' %}
+
+<script src="{% static 'js/delete_product.js' %}"></script>
+
 {% endblock content %}
