--- a/main/templates/card_product.html
+++ b/main/templates/card_product.html
@@ -1,4 +1,5 @@
 {% load static %}
+<div id="product-{{ product.id }}">
 <article class="bg-white rounded-lg border border-gray-200 hover:shadow-lg transition-shadow duration-300">
   <!-- Thumbnail -->
   <div class="aspect-[16/9] relative">
@@ -57,7 +58,9 @@
           <a href="{% url 'main:edit_product' product.id %}" class="text-gray-600 hover:text-gray-700 text-sm transition-colors">
             Edit
           </a>
-          <a href="{% url 'main:delete_product' product.id %}" class="text-red-600 hover:text-red-700 text-sm transition-colors">
+          <a href="{% url 'main:delete_product_ajax' product.id %}" 
+            class="delete-btn text-red-600 hover:text-red-700 text-sm transition-colors"
+            data-id="{{ product.id }}">
             Delete
           </a>
         </div>
@@ -71,3 +74,4 @@
     {% endif %}
   </div>
 </article>
+</div>
