feat(tugas 6): implement ajax for edit product with modal and toast for confirmation

--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -62,4 +62,8 @@
 
 <script src="{% static 'js/delete_product.js' %}"></script>
 
+{% include 'modal_edit_product.html' %}
+
+<script src="{% static 'js/edit_product.js' %}"></script>
+
 {% endblock content %}
