--- a/main/templates/main.html
+++ b/main/templates/main.html
@@ -48,7 +48,7 @@
         </a>
       </div>
     {% else %}
-      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+      <div id="product-list" div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
         {% for product in product_list %}
           {% include 'card_product.html' with product=product %}
         {% endfor %}
@@ -58,12 +58,15 @@
 </div>
 
 <!-- Modal konformasi delete product -->
-{% include 'modal_delete.html' %}
+ 
+{% include 'modal_add_product.html' %}
+<script src="{% static 'js/add_product.js' %}"></script>
 
+{% include 'modal_delete.html' %}
 <script src="{% static 'js/delete_product.js' %}"></script>
 
 {% include 'modal_edit_product.html' %}
-
 <script src="{% static 'js/edit_product.js' %}"></script>
+
 
 {% endblock content %}
