--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -27,9 +27,10 @@
           <a href="?filter=aksesoris" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
             Aksesoris
           </a>
-          <a href="{% url 'main:add_product' %}" class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
-            Add product
-          </a>
+          <button id="openAddModal"
+            class="text-gray-600 hover:text-gray-900 font-medium transition-colors">
+            Add Product
+          </button>
         </div>
         
         <!-- Desktop User Section -->
@@ -88,7 +89,7 @@
             <a href="?filter=aksesoris" class="block text-gray-600 hover:text-gray-900 font-medium py-2 transition-colors">
                 Aksesoris
             </a>
-            <a href="{% url 'main:add_product' %}" class="block text-gray-600 hover:text-gray-900 font-medium py-2 transition-colors">
+            <a href="{% url 'main:add_product_ajax' %}" class="block text-gray-600 hover:text-gray-900 font-medium py-2 transition-colors">
                 Add product
             </a>
         </div>
